--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -14,5 +14,7 @@ config = "0.11"
 serde = "1.0.117"
 serde_derive = "1.0.117"
 serde_json = "1.0.64"
-mockall = { version = "0.9.1", features = ["nightly"] }
 async-trait = "0.1"
+
+[dev-dependencies]
+mockall = { version = "0.9.1", features = ["nightly"] }
