--- a/k8s/charts/infra/templates/webhook-deployment.yaml
+++ b/k8s/charts/infra/templates/webhook-deployment.yaml
@@ -26,7 +26,8 @@ spec:
         - containerPort: 8080
         imagePullPolicy: Always
         livenessProbe:
-          tcpSocket:
+          httpGet:
+            path: /health
             port: 8080
           initialDelaySeconds: 5
           periodSeconds: 5
