--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -14,6 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+            toolchain: nightly
+            override: true
       - name: Build
         run: cd app && cargo build --verbose
       - name: Run tests
