--- a/app/storage/Cargo.toml
+++ b/app/storage/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1"
+sled = "0.34"
+thiserror = "1.0"
+anyhow = "1.0"
 
 [dev-dependencies]
+tokio = { version = "1.6", features = ["full"] }
+tempfile = "3.2"
