--- a/app/webhook/Cargo.toml
+++ b/app/webhook/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 telegram = { path = "../telegram" }
+scheduler = { path = "../scheduler" }
 log = "0.4"
 pretty_env_logger = "0.4"
 reqwest = { version = "0.11", features= ["json"] }
