--- a/k8s/charts/infra/templates/scheduler-statefulset.yaml
+++ b/k8s/charts/infra/templates/scheduler-statefulset.yaml
@@ -1,23 +1,24 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: webhook
+  name: scheduler
   labels:
-    app: webhook
+    app: scheduler
 spec:
+  serviceName: scheduler
   replicas: 3
   selector:
     matchLabels:
-      app: webhook
+      app: scheduler
   template:
     metadata:
       labels:
-        app: webhook
+        app: scheduler
     spec:
       containers:
       - name: webhook
         image: {{ .Values.image }}
-        command: [./webhook]
+        command: [./scheduler]
         args:
         - /etc/settings/settings.yaml
         env:
@@ -31,10 +32,3 @@ spec:
             port: 8080
           initialDelaySeconds: 5
           periodSeconds: 5
-        volumeMounts:
-        - name: settings-volume
-          mountPath: /etc/settings
-      volumes:
-      - name: settings-volume
-        configMap:
-          name: settings
