--- a/app/scheduler/Cargo.toml
+++ b/app/scheduler/Cargo.toml
@@ -26,6 +26,7 @@ serde = "1.0.117"
 serde_derive = "1.0.117"
 serde_json = "1.0.64"
 async-trait = "0.1"
+anyhow = "1.0"
 
 [dev-dependencies]
 mockall = { version = "0.9.1", features = ["nightly"] }
